--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<a href="https://pancakeswap.finance/" class="btn btn-main-md">BUY Now</a>
 			</div>
 			<div class="col-md-6 text-center order-1 order-md-2">
-			<img class="img-fluid" src="images/pasek4.png"  style=";" alt="screenshot">
+			<img class="img-fluid" src="images/pasek4.png"  alt="screenshot">
 			</div>
 		</div>
 	</div>
@@ -140,7 +140,7 @@
 						<li>Total Supply - 1.000.000.000</li>
 						<li>Presale - 15% More Tokens Than Listing</li>
 						<li>Presale Allocation - 20%</li>
-						<li>Presale Price Per BNB - 50.000.000 per BNB</li>
+						<li>Presale Price Per BNB - 5.000.000 per BNB</li>
 						<li>Liquidity - 90%</li>
 						<li>Team/Marketing - 10%</li>
 						<li>Tokens burnt at launch - 20%</li>
