--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			<div class="col-lg-6 align-self-center">
 			
 				<div class="service-thumb left" data-aos="fade-right">
-					<img class="img-fluid" src="images/roadmap.png" alt="roadmap">
+					<img class="img-fluid" src="images/roadmap.png" style="width: 80%;" alt="roadmap">
 				</div>
 			</div>
 			<div class="col-lg-5 mr-auto align-self-center">
