--- a/index.html
+++ b/index.html
@@ -2280,7 +2280,7 @@
 				<a href="https://pancakeswap.finance/" class="btn btn-main-md">BUY Now</a>
 			</div>
 			<div class="col-md-6 text-center order-1 order-md-2">
-			<img class="img-fluid" src="images/pasek4.png"  alt="screenshot">
+			<img class="img-fluid" src="images/whoodle.png" style="height: 80%;" alt="screenshot">
 			</div>
 		</div>
 	</div>
@@ -2375,8 +2375,8 @@
 		<div class="row no-gutters">
 			<div class="col-lg-6 align-self-center">
 			
-				<div class="service-thumb left" data-aos="fade-right">
-					<img class="img-fluid" src="images/roadmap.png" style="width: 80%;" alt="roadmap">
+				<div class="service-thumb text-center" data-aos="fade-right">
+					<img class="img-fluid" src="images/roadmap.png" style="width: 60%;" alt="roadmap">
 				</div>
 			</div>
 			<div class="col-lg-5 mr-auto align-self-center">
