--- a/index.html
+++ b/index.html
@@ -2236,16 +2236,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
 		<li class="nav-item @@about">
-			<a class="nav-link" href="about.html">Home</a>
+			<a class="nav-link" href="index.html">Home</a>
 		  </li>
 		  <li class="nav-item @@about">
-			<a class="nav-link" href="about.html">Buy</a>
+			<a class="nav-link" href="https://pancakeswap.finance/">Buy</a>
 		  </li>  
         <li class="nav-item @@about">
-          <a class="nav-link" href="about.html">Twitter</a>
+          <a class="nav-link" href="https://mobile.twitter.com/WhoodleTokenBSC">Twitter</a>
         </li>
         <li class="nav-item @@contact">
-          <a class="nav-link" href="https://telegram.org/">Telegram</a>
+          <a class="nav-link" href="https://t.me/WhoodleTokenBSC">Telegram</a>
         </li>
       </ul>
     </div>
@@ -2278,9 +2278,10 @@
 				<h1 class="text-white font-weight-bold mb-4">Whoodle Token</h1>
 				<p class="text-white mb-5">Besides its beautiful look. Whoodle is the newest addition to Binance Smart Chain.</p>
 				<a href="https://pancakeswap.finance/" class="btn btn-main-md">BUY Now</a>
+				<p style="font-size: smaller;">*listing not live</p>
 			</div>
 			<div class="col-md-6 text-center order-1 order-md-2">
-			<img class="img-fluid" src="images/whoodle.png" style="height: 80%;" alt="screenshot">
+			<img class="img-fluid" src="images/whoodle.png" style="width: 80%;" alt="whoodle">
 			</div>
 		</div>
 	</div>
