--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  
 
 
-  <link rel="shortcut icon" type="image/x-icon" href="images/pasek4.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="images/logo.png" />
   
   
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
